--- a/システム開発/機能一覧/機能一覧.md
+++ b/システム開発/機能一覧/機能一覧.md
@@ -7,7 +7,7 @@
  |1-1| ログイン|  ログイン|○|×||
  |1-2| ログアウト| ログアウト|×|○||
  |1-3| 会員登録|会員登録を行う|○|×||
- |1-4| 商品検索| 商品名、キーワードから商品を探す|○|○||
+ |1-4| 商品検索| 商品名から商品を探す|○|○||
  |1-5| 商品一覧| 商品の一覧を閲覧できる|×|○||
  |1-6| 商品詳細| 商品をクリックすると商品の詳細を閲覧できる|×|○||
  |1-7| 商品追加| 商品をカートに追加する|○|×||
